<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
        android:text="@string/welcome"
        android:textColor="#000000"/>
    <LinearLayout
        android:id="@+id/buttonArea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/chooseTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_true"
            android:padding="24dp"/>
        <Button
            android:id="@+id/chooseFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_false"
            android:padding="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonArea2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/choosePrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_prerious"
            android:padding="24dp"/>
        <Button
            android:id="@+id/chooseNext"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/choice_next"
            android:padding="24dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttonArea3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/getAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="作弊"
            android:padding="24dp"/>
    </LinearLayout>
</LinearLayout>